--- a/src/pages/register/Register.css
+++ b/src/pages/register/Register.css
@@ -8,7 +8,7 @@
         font-size: 1.5rem;
         letter-spacing: -0.025em;
         text-align: center;
-        color: var(--color-primary);
+        color: var(--text-color);
     }
 
     form {
@@ -18,7 +18,7 @@
     label {
         display: block;
         font-weight: 500;
-        color: var(--color-primary);
+        color: var(--text-color);
         margin-bottom: 0.5rem;
     }
 
@@ -26,16 +26,16 @@
         padding: 0.375rem 0.75rem;
         border-radius: 0.375rem;
         width: 100%;
-        color: var(--color-quinary);
+        color: var(--color);
         margin-bottom: 1rem;
     }
 
     a {
         font-weight: 600;
-        color: var(--color-primary);
+        color: var(--text-color);
 
         &:hover {
-            color: var(--color-primary-hover);
+            color: var(--text-color-hover);
         }
     }
 
