--- a/src/pages/update-password/Update-Password.css
+++ b/src/pages/update-password/Update-Password.css
@@ -26,7 +26,7 @@
         padding: 0.375rem 0.75rem;
         border-radius: 0.375rem;
         width: 100%;
-        color: var(--color-quinary);
+        color: var(--color-secondary);
         margin-bottom: 1rem;
     }
 
